@@ -2,8 +2,6 @@
 Planned for 0.2.7:
 ==================
 
-* keep track of whether or not we're playing any samples
-
 * function pointers in mix.c for mix_in (add) and translate (copy):
   mix_funcs[MAX] = { mix_to_format, mix_from_format, clip_format, ... };
   set function when creating player. update if a filter is added or removed
@@ -13,10 +11,6 @@ Planned for 0.2.7:
   so in effect an audio manager could be written
   play_sample_pan( int sample_id, int left_volume, int right_volume );
   
-* add auto-suspend mode, if no activity for (timeout) seconds, close
-  audio device.  add esd_suspend() and esd_resume() functions.  call 
-  these functions from the corresponding protocol handlers
-
 * factor out the "Reduce buffers on sockets to the minimum needed" code
   to a single function(socket); 
 
@@ -28,6 +22,7 @@ Planned for 0.2.7:
   for Linux: pick /dev/dsp2 if more than one card.  
 
 * make all protocols return an int indicating success/failure at a minimum
+  NOTE: this will break protocol!
 
 * change audio device with esdctl??? on the fly???
 
